--- a/style.css
+++ b/style.css
@@ -1,210 +1,72 @@
-/*=========RESET=========*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+*{
+    margin: 0%;
+    padding: 0%;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+p{
+    margin-bottom: 65px;
+    line-height: 2;
 }
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/*=========BASE STYLE=========*/
-body{
-    color: #fff;
-    font-family:"Helvetica Neue",Arial, sans-serif;
-    font-size: 15px;
-}
-
-/*=========  HEADER  =========*/
-
-.page-header  .logo{
-    height: 66px;
-    width: 100px;
-    background: rgba(0,  0, 0, 0);
-    position: absolute;
-    left: 0%;
-    top: 0%;
-}
-
-.page-header .logo{
-    float: left;
-    padding-top: 23px;
-    box-sizing: border-box;
-}
-.page-header .main-nav{
-    float: rigth;
-}
-.main-nav li{
-    float: left;
-    margin-left: 90px;
-}
-.main-nav li{
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height: 66px;
-}
-/*=========  MAIN  =========*/
-/*=========  Bannerr  =========*/
-.banner{
-    height: 612px;
-    background: url(banner.png);
-    background-size: cover;
-    margin-top: 230px;
-}
-.banner-block{
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 60px;
-    font-weight: bold;
-    text-align: center;
-}
-h1{
-    text-decoration: uppercase;
-}
-.subtitle{
-    font-size: 21px;
-    font-weight: 300;
-    margin: 29;
-}
-.learn-more{
-    display: block;
-    padding: 20px 30px;
-    color: inherit;
-    text-transform: uppercase;
-     background: #ca0500;
-    font-size: 14px;
-    text-decoration: none;
-    width: 166px;
-    box-sizing: border-box;
+.wrapper{
+    width: 1200px;
     margin: 0 auto;
 }
-
-/*=========  Articles  =========*/
-.articles{
-    
-    background: linear-gradient(180deg, rgba(255,128,0,0.033), 3em, rgba(255,216,0,0) 33em), linear-gradient( 90deg, hsla(34deg,0%,96%,0.98) 5%, 10%, hsla(34deg,38%,99%,0.95) 25%, 33%, hsla(34deg,38%,99%,1) 50%, 67%, hsla(34deg,38%,99%,0.975) 75%, 90%, hsla(34deg,0%,96%,0.98) 95% ) 0 0 / 100% 100% no-repeat, linear-gradient(179deg, hsla(34deg,38%,99%,1) 11em, hsla(34deg,38%,99%,0) 13em), linear-gradient(0deg, hsla(34deg,38%,99%,1) 23em, hsla(34deg,38%,99%,0) 42em), hsla(34deg,38%,99%,1);
-
+.header, .footer{
+    height: 200px;
+    background-image: url(images/bg.png);
+    display: flex;
+    align-items: center;
 }
-.articles>.wrapper:after, .page-footer>.wrapper:after{
-    content: '.';
-    font-size: 0;
-    height: 1px;
-    width: 100%;
-    display: block;
-    clear: both;
-
+.footer{
+    height: 200px;
+    background-image: url(images/bg.png);
 }
-article{
-    width:  50%;
-    float: left;
-    box-sizing: border-box;
-    padding-top: 60px;
+.main>.wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
-article:first-of-type{
-    padding-right: 65px;
-    
-
-}
-article:first-of-type{
-    padding-left: 65px;
-    color: #000;
-}
-h2{
+.main-cat, .main-text{
+    width: 50%;
     font-size: 36px;
-    font-weight: 300;
-    color: #000;
+    font-family: "ComicSans";
 }
-h2::after{
-    content: '.';
-    font-size: 0;
-    height: 1px;
-    width: 38px;
-    display: block;
-    background:#ca0500;
-    margin: 25px;
+.main-cat{
+    margin-right: 50px;
 
 }
-.quote{
-    font-size: 23px;
-    font-style: italic;
-    font-weight: 300;
-    margin-bottom: 25px;
-    color: #000;
+.footer>.wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
-.text{
-    font-weight: 300;
-    margin-bottom: 60px;
-    color: #000;
+.social{
+    padding: 0;
+    list-style: none;
+    display: flex;
 }
-/*=========  Footer =========*/
-.page-footer{
-    background: #000;
-    padding-top: 25px;
-
+.social-item{
+    width: 66px;
+    height: 66px;
+    background-color: red;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-right: 10px;
+    
 }
-.footer-cool{
-    width: 25%;
-    float: left;
-}
-.page-footer h3 {
-    font-size: 13px;
-    text-transform: uppercase;
-}
-.page-footer h3::after{
-    content: '.';
-    font-size: 0;
-    background: #050404;
-    width: 90%;
-    height: 1px;
-    display: block;
-    margin: 15px 0;
-}
-.page-footer li{
-    content: '.';
-    font-size: 13px;
-    color: #999;
-    line-height: 1.6;
+.social-link{
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 .copy{
-    color: #585858;
-    
-}
+    font-size: 24px;
+    font-family: Arial;
+    margin-bottom: 0;
 
+}
